# axon

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compiler/: CMakeLists.txt
compiler/cmake/: helpers.cmake
compiler/include/axon/: compiler.hpp  exception.hpp  exporter.hpp  expr.hpp  expr_visitor.hpp  matrix.hpp  module.hpp  module_builder.hpp  value.hpp
compiler/src/: c_exporter.cpp  c_exporter.hpp  compiler.cpp  exception.cpp  exporter.cpp  expr.cpp  expr_visitor.cpp  main.cpp  module.cpp  value.cpp
examples/basic/: CMakeLists.txt  compiler.cpp  train.c
examples/device_api/: main.cpp
examples/image_encode/: main.cpp
examples/image_encoder/: CMakeLists.txt  compiler.cpp  main.cpp  random.cpp  random.h  train.c
examples/minimal/: main.cpp
include/axon/: Dataset.h  Device.h  DeviceBuffer.h  DeviceFactory.h  DeviceProgram.h  Expr.h  ExprPrinter.h  ExprVisitor.h  Interpreter.h  Matrix.h  Module.h  ModuleBuilder.h  Optimizer.h  Value.h
shaders/: interpolate.glsl  row_reduce.glsl
src/: Compiler.h  Dataset.cpp  Device.cpp  Device.h  DeviceBuffer.cpp  DeviceBuffer.h  DeviceFactory.cpp  DeviceProgram.cpp  DeviceProgram.h  Exception.cpp  Expr.cpp  ExprPrinter.cpp  ExprVisitor.cpp  Interpreter.cpp  Module.cpp  OpenGL.cpp  OpenGL.h  Optimizer.cpp  VFloat.h  Value.cpp
